Colab을 통해 생성됨

--- a/bigdatacapstone.ipynb
+++ b/bigdatacapstone.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/eunShim/Backend/blob/main/bigdatacapstone.ipynb",
-      "authorship_tag": "ABX9TyPkaScSgMD1pkma6fkYxeiV",
+      "authorship_tag": "ABX9TyMRRtOVKg+zuBKmMbmcNuA+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,10 +29,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 33,
       "metadata": {
         "id": "jE0ExgCMeu21",
-        "outputId": "0f6ed2d0-6233-4712-9701-771f793af36c",
+        "outputId": "a59b7872-5722-46ca-f409-3cc2ceeb0990",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -74,13 +74,13 @@
         "print(df.iloc[:, :5].head())\n"
       ],
       "metadata": {
-        "id": "RRDNZFO7sBgX",
-        "outputId": "74b9502a-751d-42be-dd3e-215a0959c718",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RRDNZFO7sBgX",
+        "outputId": "77970a42-94a8-4742-844b-dce6a7e7661e"
       },
-      "execution_count": 26,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -130,34 +130,133 @@
         "print(df_sample.head())\n"
       ],
       "metadata": {
-        "id": "hfJD9qSOsBrx",
-        "outputId": "06f0ef0f-b9b0-4a98-af89-0b7edd0f1b98",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "hfJD9qSOsBrx",
+        "outputId": "751fc37b-9ec3-48dc-b1ec-33b34ebe3987"
       },
-      "execution_count": 32,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "총 사용자 파일 수: 297915\n",
-            "샘플 사용자 파일 예시: ['KT3/u474769.csv', 'KT3/u633546.csv', 'KT3/u733730.csv', 'KT3/u547146.csv', 'KT3/u333479.csv']\n",
-            "샘플 데이터 크기: (181428, 7)\n",
+            "샘플 사용자 파일 예시: ['KT3/u284978.csv', 'KT3/u814998.csv', 'KT3/u338032.csv', 'KT3/u437564.csv', 'KT3/u637271.csv']\n",
+            "샘플 데이터 크기: (159196, 7)\n",
             "       timestamp action_type item_id     source user_answer platform  \\\n",
-            "0  1549275419383       enter   b4790  diagnosis         NaN   mobile   \n",
-            "1  1549275434826     respond   q6258  diagnosis           b   mobile   \n",
-            "2  1549275439430      submit   b4790  diagnosis         NaN   mobile   \n",
-            "3  1549275439545       enter   b4512  diagnosis         NaN   mobile   \n",
-            "4  1549275454532     respond   q5980  diagnosis           c   mobile   \n",
+            "0  1539990579078       enter   b3213  diagnosis         NaN      web   \n",
+            "1  1539990588793      submit   b3213  diagnosis         NaN      web   \n",
+            "2  1539990588861       enter   b3213  diagnosis         NaN      web   \n",
+            "3  1539990594411     respond   q4681  diagnosis           b      web   \n",
+            "4  1539990596961      submit   b3213  diagnosis         NaN      web   \n",
             "\n",
             "  source_file  \n",
-            "0     u474769  \n",
-            "1     u474769  \n",
-            "2     u474769  \n",
-            "3     u474769  \n",
-            "4     u474769  \n"
+            "0     u284978  \n",
+            "1     u284978  \n",
+            "2     u284978  \n",
+            "3     u284978  \n",
+            "4     u284978  \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "from sklearn.cluster import KMeans\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "# 풀이 개수: submit 이벤트 개수 = 푼 문제 수\n",
+        "# 소요 시간: enter → submit 사이 timestamp 차이 평균\n",
+        "\n",
+        "# df_sample 은 여러 사용자 합친 DataFrame (source_file = 사용자)\n",
+        "\n",
+        "# 1. timestamp를 datetime 변환\n",
+        "df_sample[\"timestamp\"] = pd.to_datetime(df_sample[\"timestamp\"])\n",
+        "\n",
+        "# 2. 사용자별 특징 추출\n",
+        "user_features = []\n",
+        "\n",
+        "for uid, group in df_sample.groupby(\"source_file\"):\n",
+        "    group = group.sort_values(\"timestamp\")\n",
+        "\n",
+        "    # enter와 submit 시각 쌍 찾기\n",
+        "    enters = group[group[\"action_type\"] == \"enter\"][\"timestamp\"].tolist()\n",
+        "    submits = group[group[\"action_type\"] == \"submit\"][\"timestamp\"].tolist()\n",
+        "\n",
+        "    times = []\n",
+        "    for i in range(min(len(enters), len(submits))):\n",
+        "        delta = (submits[i] - enters[i]).total_seconds()\n",
+        "        if delta > 0:\n",
+        "            times.append(delta)\n",
+        "\n",
+        "    total_attempts = len(submits)\n",
+        "    avg_elapsed = sum(times)/len(times) if times else 0\n",
+        "\n",
+        "    # 응답률: 답안을 제출했는지 여부 (user_answer 결측치 여부)\n",
+        "    submitted = group[group[\"action_type\"] == \"submit\"]\n",
+        "    if len(submitted) > 0:\n",
+        "        answer_rate = submitted[\"user_answer\"].notna().mean()\n",
+        "    else:\n",
+        "        answer_rate = 0\n",
+        "\n",
+        "    user_features.append({\n",
+        "        \"source_file\": uid,\n",
+        "        \"total_attempts\": total_attempts,\n",
+        "        \"avg_elapsed\": avg_elapsed,\n",
+        "        \"answer_rate\": answer_rate\n",
+        "    })\n",
+        "\n",
+        "user_stats = pd.DataFrame(user_features)\n",
+        "print(user_stats.head())\n",
+        "\n",
+        "# 3. KMeans 군집화\n",
+        "X = user_stats[[\"total_attempts\", \"avg_elapsed\", \"answer_rate\"]]\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "X_scaled = scaler.fit_transform(X)\n",
+        "\n",
+        "kmeans = KMeans(n_clusters=3, random_state=42, n_init=\"auto\")\n",
+        "user_stats[\"cluster\"] = kmeans.fit_predict(X_scaled)\n",
+        "\n",
+        "print(user_stats.head())\n",
+        "\n",
+        "# 4. 클러스터별 평균 특징\n",
+        "print(user_stats.groupby(\"cluster\").mean(numeric_only=True))\n"
+      ],
+      "metadata": {
+        "id": "_scr1DZavzQ0",
+        "outputId": "587e528e-8b76-42b8-f784-558a14e41e2e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "  source_file  total_attempts  avg_elapsed  answer_rate\n",
+            "0      u10233             352     1.485177          0.0\n",
+            "1       u1083              23     0.003791          0.0\n",
+            "2      u13621              22     0.000918          0.0\n",
+            "3      u13667               7     0.000051          0.0\n",
+            "4      u15107             226     1.266452          0.0\n",
+            "  source_file  total_attempts  avg_elapsed  answer_rate  cluster\n",
+            "0      u10233             352     1.485177          0.0        0\n",
+            "1       u1083              23     0.003791          0.0        0\n",
+            "2      u13621              22     0.000918          0.0        0\n",
+            "3      u13667               7     0.000051          0.0        0\n",
+            "4      u15107             226     1.266452          0.0        0\n",
+            "         total_attempts  avg_elapsed  answer_rate\n",
+            "cluster                                          \n",
+            "0             28.909836     0.078647          0.0\n",
+            "1           1196.363636     2.363150          0.0\n",
+            "2            826.000000    12.154969          0.0\n"
           ]
         }
       ]
@@ -166,9 +265,27 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "lPaL8ETisBt2"
+        "id": "kFVOBUSwvzS5"
       },
       "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QObjQOlPvzWF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "lPaL8ETisBt2"
+      },
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -177,7 +294,7 @@
       "metadata": {
         "id": "YJO1iCMasBv2"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -186,7 +303,7 @@
       "metadata": {
         "id": "yDsEtL4ksBx6"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -195,7 +312,7 @@
       "metadata": {
         "id": "HinxgW3wsB05"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -209,9 +326,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "joWfM5d2pp5Z",
-        "outputId": "139d72a1-56ff-4e21-c8a9-9957b89b920d"
+        "outputId": "e3534a87-3b8e-48ce-acea-8eb3aaa8a36c"
       },
-      "execution_count": 19,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
