Colab을 통해 생성됨

--- a/bigdatacapstone.ipynb
+++ b/bigdatacapstone.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/eunShim/Backend/blob/main/bigdatacapstone.ipynb",
-      "authorship_tag": "ABX9TyMXepVV/yKc6ZKsxOXk3Fa4",
+      "authorship_tag": "ABX9TyM0grfpJ1nyWesoSbSXDQHl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,73 +40,87 @@
     {
       "cell_type": "code",
       "source": [
-        "import zipfile, pandas as pd, random, numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
+        "# ============================================\n",
+        "# ✅ EdNet-KT4.zip 500명 샘플 분석 + 시각화 (7z 버전)\n",
+        "# ============================================\n",
+        "import os, random, pandas as pd, numpy as np, matplotlib.pyplot as plt\n",
+        "from tqdm import tqdm\n",
         "\n",
-        "# ============================================\n",
-        "# 1. ZIP 내부에서 직접 파일 접근 (압축 해제 X)\n",
-        "# ============================================\n",
+        "# --------------------------------------------\n",
+        "# 1. 7z 설치 및 내부 파일 목록 확인\n",
+        "# --------------------------------------------\n",
+        "!sudo apt-get install -y p7zip-full > /dev/null\n",
+        "\n",
         "zip_path = \"/content/EdNet-KT4.zip\"\n",
-        "zf = zipfile.ZipFile(zip_path)\n",
-        "file_list = [f for f in zf.namelist() if f.endswith(\".csv\")]\n",
-        "print(\"총 사용자 수:\", len(file_list))\n",
+        "list_output = os.popen(f\"7z l {zip_path} | grep '.csv' | awk '{{print $6}}'\").read().splitlines()\n",
         "\n",
-        "# 500명 샘플링\n",
-        "sample_files = random.sample(file_list, 500)\n",
+        "if not list_output:\n",
+        "    raise RuntimeError(\"❌ CSV 파일 목록을 찾을 수 없습니다. 파일이 손상되었거나 7z 포맷이 아닐 수 있습니다.\")\n",
+        "\n",
+        "print(f\"✅ 내부 CSV 파일 {len(list_output)}개 탐색됨\")\n",
+        "\n",
+        "# --------------------------------------------\n",
+        "# 2. 무작위 500명 샘플링 후 추출\n",
+        "# --------------------------------------------\n",
+        "sample_files = random.sample(list_output, 500)\n",
+        "os.makedirs(\"/content/KT4_sample\", exist_ok=True)\n",
+        "\n",
+        "# 선택된 500명만 추출\n",
+        "for f in tqdm(sample_files, desc=\"📦 압축 해제 중\"):\n",
+        "    os.system(f\"7z x '{zip_path}' '{f}' -o'/content/KT4_sample' -y > /dev/null\")\n",
+        "\n",
+        "print(\"✅ 샘플 500명 추출 완료!\")\n",
+        "\n",
+        "# --------------------------------------------\n",
+        "# 3. 사용자별 행동 통계 계산\n",
+        "# --------------------------------------------\n",
+        "folder = \"/content/KT4_sample\"\n",
+        "files = [os.path.join(folder, f) for f in os.listdir(folder) if f.endswith(\".csv\")]\n",
+        "\n",
         "user_stats = []\n",
         "\n",
-        "# ============================================\n",
-        "# 2. 사용자별 통계 계산\n",
-        "# ============================================\n",
-        "for f in sample_files:\n",
+        "for f in tqdm(files, desc=\"📊 사용자 분석 중\"):\n",
         "    try:\n",
-        "        with zf.open(f) as fp:\n",
-        "            df = pd.read_csv(fp)\n",
-        "            if df.empty:\n",
-        "                continue\n",
+        "        df = pd.read_csv(f)\n",
+        "        if df.empty or \"timestamp\" not in df.columns:\n",
+        "            continue\n",
         "\n",
-        "            user_id = f.split(\"/\")[-1].replace(\".csv\", \"\")\n",
-        "            df = df.sort_values(\"timestamp\")\n",
+        "        user_id = os.path.basename(f).replace(\".csv\", \"\")\n",
+        "        df = df.sort_values(\"timestamp\")\n",
         "\n",
-        "            # --- quit 횟수 ---\n",
-        "            quit_count = (df[\"action_type\"] == \"quit\").sum()\n",
+        "        quit_count = (df[\"action_type\"] == \"quit\").sum()\n",
+        "        duration = df[\"timestamp\"].iloc[-1] - df[\"timestamp\"].iloc[0]\n",
+        "        mobile_ratio = (df[\"platform\"] == \"mobile\").mean()\n",
+        "        web_ratio = (df[\"platform\"] == \"web\").mean()\n",
+        "        submit_count = (df[\"action_type\"] == \"submit\").sum()\n",
+        "        unique_q = df[df[\"item_id\"].astype(str).str.startswith(\"q\")][\"item_id\"].nunique()\n",
+        "        submit_ratio = submit_count / unique_q if unique_q > 0 else np.nan\n",
         "\n",
-        "            # --- 소요시간 ---\n",
-        "            duration = df[\"timestamp\"].iloc[-1] - df[\"timestamp\"].iloc[0]\n",
+        "        user_stats.append({\n",
+        "            \"user_id\": user_id,\n",
+        "            \"quit_count\": quit_count,\n",
+        "            \"duration_ms\": duration,\n",
+        "            \"mobile_ratio\": mobile_ratio,\n",
+        "            \"web_ratio\": web_ratio,\n",
+        "            \"submit_ratio\": submit_ratio\n",
+        "        })\n",
         "\n",
-        "            # --- 플랫폼 비율 ---\n",
-        "            mobile_ratio = (df[\"platform\"] == \"mobile\").mean()\n",
-        "            web_ratio = (df[\"platform\"] == \"web\").mean()\n",
-        "\n",
-        "            # --- 제출 비율 (submit / 문제 수) ---\n",
-        "            submit_count = (df[\"action_type\"] == \"submit\").sum()\n",
-        "            unique_q = df[df[\"item_id\"].astype(str).str.startswith(\"q\")][\"item_id\"].nunique()\n",
-        "            submit_ratio = submit_count / unique_q if unique_q > 0 else np.nan\n",
-        "\n",
-        "            user_stats.append({\n",
-        "                \"user_id\": user_id,\n",
-        "                \"quit_count\": quit_count,\n",
-        "                \"duration_ms\": duration,\n",
-        "                \"mobile_ratio\": mobile_ratio,\n",
-        "                \"web_ratio\": web_ratio,\n",
-        "                \"submit_ratio\": submit_ratio\n",
-        "            })\n",
         "    except Exception as e:\n",
-        "        print(f\"{f} 오류: {e}\")\n",
+        "        print(f\"⚠️ {f} 처리 오류:\", e)\n",
         "\n",
-        "# ============================================\n",
-        "# 3. 요약 결과 정리\n",
-        "# ============================================\n",
         "stats_df = pd.DataFrame(user_stats)\n",
         "print(\"\\n✅ 사용자별 통계 미리보기:\")\n",
         "print(stats_df.head())\n",
         "\n",
-        "print(\"\\n📈 전체 요약 통계:\")\n",
+        "# --------------------------------------------\n",
+        "# 4. 통계 요약\n",
+        "# --------------------------------------------\n",
+        "print(\"\\n📈 전체 통계 요약:\")\n",
         "print(stats_df.describe())\n",
         "\n",
-        "# ============================================\n",
-        "# 4. 시각화\n",
-        "# ============================================\n",
+        "# --------------------------------------------\n",
+        "# 5. 시각화\n",
+        "# --------------------------------------------\n",
         "plt.figure(figsize=(8,4))\n",
         "stats_df[\"quit_count\"].hist(bins=30, color=\"lightcoral\")\n",
         "plt.title(\"Quit 행동 횟수 분포\")\n",
@@ -134,7 +148,7 @@
         "plt.ylabel(\"Quit 횟수\")\n",
         "plt.show()\n",
         "\n",
-        "print(\"\\n✅ 시각화 완료! 데이터프레임 변수명: stats_df\")\n"
+        "print(\"\\n✅ 분석 및 시각화 완료! DataFrame 이름: stats_df\")\n"
       ],
       "metadata": {
         "id": "EpcEa_vkjLoP"
