--- a/bigdatacapstone.ipynb
+++ b/bigdatacapstone.ipynb
@@ -151,10 +151,27 @@
         "print(\"\\n✅ 분석 및 시각화 완료! DataFrame 이름: stats_df\")\n"
       ],
       "metadata": {
-        "id": "EpcEa_vkjLoP"
+        "id": "EpcEa_vkjLoP",
+        "outputId": "a7c0a549-6500-4d83-d82e-2d51ea678510",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 219
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "RuntimeError",
+          "evalue": "❌ CSV 파일 목록을 찾을 수 없습니다. 파일이 손상되었거나 7z 포맷이 아닐 수 있습니다.",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+            "\u001b[0;32m/tmp/ipython-input-337113683.py\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mlist_output\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mRuntimeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"❌ CSV 파일 목록을 찾을 수 없습니다. 파일이 손상되었거나 7z 포맷이 아닐 수 있습니다.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"✅ 내부 CSV 파일 {len(list_output)}개 탐색됨\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mRuntimeError\u001b[0m: ❌ CSV 파일 목록을 찾을 수 없습니다. 파일이 손상되었거나 7z 포맷이 아닐 수 있습니다."
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
