Colab을 통해 생성됨

--- a/bigdatacapstone.ipynb
+++ b/bigdatacapstone.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "https://github.com/eunShim/Backend/blob/main/bigdatacapstone.ipynb",
-      "authorship_tag": "ABX9TyM0grfpJ1nyWesoSbSXDQHl",
+      "authorship_tag": "ABX9TyPvMQcNSdRu0zpHN0SYsThE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,7 +55,7 @@
         "list_output = os.popen(f\"7z l {zip_path} | grep '.csv' | awk '{{print $6}}'\").read().splitlines()\n",
         "\n",
         "if not list_output:\n",
-        "    raise RuntimeError(\"❌ CSV 파일 목록을 찾을 수 없습니다. 파일이 손상되었거나 7z 포맷이 아닐 수 있습니다.\")\n",
+        "    raise RuntimeError(\"❌ CSV 파일 목록을 찾을 수 없습니다.\")\n",
         "\n",
         "print(f\"✅ 내부 CSV 파일 {len(list_output)}개 탐색됨\")\n",
         "\n",
@@ -152,7 +152,7 @@
       ],
       "metadata": {
         "id": "EpcEa_vkjLoP",
-        "outputId": "21c337e9-4bac-46de-8906-5dfe3e7eed1d",
+        "outputId": "5a4423a8-f8e2-4492-d406-7a21933b4096",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -160,8 +160,11 @@
       "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
+          "metadata": {
+            "tags": null
+          },
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "✅ 내부 CSV 파일 87861개 탐색됨\n"
           ]
@@ -170,7 +173,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "📦 압축 해제 중:   1%|          | 5/500 [00:05<08:20,  1.01s/it]"
+            "📦 압축 해제 중:  42%|████▏     | 210/500 [03:33<04:36,  1.05it/s]"
           ]
         }
       ]
